--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "framer-motion": "^12.6.3",
+    "lucide-react": "^0.488.0",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0"
